--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,17 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        id: python
         run: |
           pip install oitnb isort
           isort . && oitnb .
+      - name: s
+        if: steps.python.outcome == 'failure'
+        run: |
+          echo pass
+
+      - name: Commit
+        run: |
           git config --global user.name 'ci-cd'
           git config --global user.email 'ci-cd@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
