--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,17 @@ jobs:
           echo pass
 
       - name: Commit
+        if: steps.python.outcome == 'failure'
         run: |
           git config --global user.name 'ci-cd'
           git config --global user.email 'ci-cd@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git commit -am "Formatting"
           git push
+          
+          RESULT="$?"
+          if [ "$RESULT" != "0" ]; then
+            exit 0
+          else
+            exit 1
+          fi
