--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           git config --global user.email 'ci-cd@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           
-          if [ "$(git commit -am 'formatting')" != "0" ]; then
+          if [ "$(git commit -a --amend)" != "0" ]; then
             exit 0
           else
             exit 0
